--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
