--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "clipboard": "^2.0.11",
     "date-fns": "^3.6.0",
+    "marked": "^12.0.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
